[package]
name = "gnomeutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
poise = "0.2"
gettext = "0.4"
sha2 = "0.10"
parking_lot = "0.12"
sysinfo = "0.23"
tokio = "1"
anyhow = "1"
dashmap = "5"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["postgres", "macros", "runtime-tokio-rustls"]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls"]

[dependencies.serde]
version = "1"
features = ["derive"]
