[package]
name = "gnomeutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
async-trait = "0.1"
anyhow = "1"

[dependencies.indexmap]
version = "1"
optional = true

[dependencies.gettext]
version = "0.4"
optional = true

[dependencies.poise]
git = "https://github.com/kangalioo/poise"
branch = "serenity-next"
optional = true

[dependencies.sqlx]
version = "0.6"
optional = true
default-features = false
features = ["postgres", "macros", "runtime-tokio-rustls"]

[dependencies.sha2]
version = "0.10"
optional = true

[dependencies.itertools]
version = "0.10"
optional = true

[dependencies.strsim]
version = "0.10"
optional = true

[dependencies.reqwest]
version = "0.11"
optional = true
default-features = false
features = ["rustls-tls"]

[dependencies.serenity]
version = "0.11"
optional = true
default-features = false
features = ["cache", "http", "utils", "builder", "model", "rustls_backend", "client", "gateway"]

[dependencies.songbird]
git = "https://github.com/serenity-rs/songbird.git"
features = ["driver", "rustls"]
default-features = false
optional = true
branch = "next"

[dependencies.parking_lot]
version = "0.12"
optional = true

[dependencies.sysinfo]
version = "0.26"
optional = true

[dependencies.tokio]
version = "1"
features = ["time"]

[dependencies.serde]
version = "1"
optional = true
features = ["derive"]

[dependencies.serde_json]
version = "1"
optional = true

[dependencies.dashmap]
version = "5"
optional = true

[features]
i18n = ["gettext"]
analytics = ["sqlx", "dashmap"]
help_command = ["indexmap", "strsim", "poise"]
logging = ["serenity", "itertools", "parking_lot"]
bot_list = ["serenity", "serde_json", "reqwest", "serde"]
error_handling = ["poise", "sqlx", "sha2", "sysinfo", "parking_lot"]

[patch.crates-io]
serenity = {git = "https://github.com/serenity-rs/serenity", branch = "next"}

[patch."https://github.com/kangalioo/poise"]
poise = {git = "https://github.com/GnomedDev/poise", branch = "serenity-next"}
